<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <properties>
	    <project.version>2.9-RELEASE</project.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
    
    <groupId>fr.cirad</groupId>
    <artifactId>Mgdb2Export</artifactId>
    <version>${project.version}</version>
    <packaging>jar</packaging>
    
    <dependencies>
        <dependency>
            <groupId>fr.cirad</groupId>
            <artifactId>Mgdb2</artifactId>
            <version>2.9-RELEASE</version>
        </dependency>

		<dependency>
		    <groupId>net.sourceforge.parallelcolt</groupId>
		    <artifactId>parallelcolt</artifactId>
		    <version>0.10.1</version>
		</dependency>

<!--		<dependency>-->
<!--		    <groupId>colt</groupId>-->
<!--		    <artifactId>colt</artifactId>-->
<!--		    <version>1.2.0</version>-->
<!--		</dependency>-->

		<dependency>
		    <groupId>org.ejml</groupId>
		    <artifactId>ejml-simple</artifactId>
		    <version>0.43.1</version>
		</dependency>        
 		<dependency>
    		<groupId>javax.servlet</groupId>
    		<artifactId>javax.servlet-api</artifactId>
    		<version>4.0.1</version>
    		<scope>provided</scope>
    	</dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.9.0</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <source>17</source>
					<target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
        <sourceDirectory>${project.basedir}/src</sourceDirectory>
    </build>
   
</project>
